# voronoi-2

./: CMakeLists.txt  Makefile  README.md  run-brut-voronoi-approximation.cpp  run-brut-voronoi.cpp  run-sequential-voronoi.cpp  run-voronoi-adaptatif.cpp
execution-example/brut-voronoi-example/: README.md
execution-example/brut-voronoi-image-approximation/: README.md
execution-example/sequential-voronoi-example/: README.md
libs/: apply-colors-on-voronoi.h  brut-voronoi.h  germ.h  image-approximation.h  sequential-voronoi.h
